# WisdomChannel

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml
examples/: access.cqc.json
scripts/: install-here.ps1
skills/access/: SKILL.md
skills/configure/: SKILL.md
tests/: test_context.py  test_onboarding.py  test_scrub.py  test_smoke.py
wisdom_channel/: __init__.py  __main__.py  access.py  access_cli.py  bridge.py  client.py  config.py  context.py  doctor.py  init.py  logging.py  onboarding.py  paths.py  scrub.py  server.py
