[project]
name = "wisdom-channel"
version = "0.1.0"
description = "WeChat channel plugin for Claude Code — pushes WeChat messages into a running Claude Code session via the Wisdom automation API."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "AceData Cloud" }]
keywords = ["wechat", "claude", "claude-code", "mcp", "channel", "wisdom"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
wisdom-channel = "wisdom_channel.__main__:_main"

[project.urls]
Homepage = "https://github.com/AceDataCloud/WisdomChannel"
Wisdom = "https://github.com/AceDataCloud/Wisdom"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wisdom_channel*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003", "RUF012"]
